--- a/src/components/Souvenir/Souvenir.module.css
+++ b/src/components/Souvenir/Souvenir.module.css
@@ -36,6 +36,7 @@
   justify-content: space-around;
   margin-right: 21rem;
   width: 126rem;
+  margin-left: 1.1rem;
 }
 
 .item__text{
@@ -106,7 +107,7 @@
   border: none;
   color: grey;
   display: flex;
-  margin: 8rem 0 0rem 110rem;
+  margin: -1.5rem 0 0rem 110rem;
 }
 
 .next__text {
@@ -130,7 +131,7 @@
   border: none;
   background-color:  #FFDC61;
   display: flex;
-  margin: 4rem 0 0rem 110rem;
+  margin: -1.5rem 0 0rem 110rem;
 }
 
 
