--- a/src/components/Keuze/Keuze.module.css
+++ b/src/components/Keuze/Keuze.module.css
@@ -4,8 +4,9 @@
 .header{
   display: flex;
   justify-content: space-around;
-  margin-right: 21rem;
+  margin-right: 23rem;
   width: 126rem;
+  margin-left: 1.2rem;
 }
 
 .procesbar {
@@ -107,7 +108,7 @@
   border: none;
   color: grey;
   display: flex;
-  margin: -3.7rem 0 0rem 108.5rem;
+  margin: -2.9rem 0 0rem 110.1rem;
 }
 
 .next__text {
@@ -270,7 +271,7 @@
   border: none;
   background-color:  #FFDC61;
   display: flex;
-  margin: -3.7rem 0 0rem 108.5rem;
+  margin: -2.9rem 0 0rem 110.1rem;
 }
 
 .error {
