validatie input fiels

--- a/src/components/Gegevens/Gegevens.module.css
+++ b/src/components/Gegevens/Gegevens.module.css
@@ -3,7 +3,7 @@
 @value fontTitel, fontSubtitel, spacer1 from tokens;
 
 .error {
-  composes: error from "../../styles/layouts.module.css";
+  composes: error__input from "../../styles/layouts.module.css";
 }
 
 .vraag__bold {
