--- a/src/components/Delen/Delen.module.css
+++ b/src/components/Delen/Delen.module.css
@@ -2,6 +2,10 @@
 @value tokens: "../../styles/tokens.module.css";
 @value fontTitel, spacer1, fontSubtitel from tokens;
 
+.error {
+  composes: error from "../../styles/layouts.module.css";
+}
+
 .procesbar {
   display: flex;
   align-items: center;
@@ -108,7 +112,7 @@
   composes: next from "../../styles/layouts.module.css";
   border: none;
   color: grey;
-  margin: -13.1rem 0 2rem 100rem;
+  margin: -8.5rem 0 2rem 100rem;
 }
 
 .next__text {
@@ -132,7 +136,7 @@
   border: none;
   background-color:  #FFDC61;
   display: flex;
-  margin: -13.1rem 0 2rem 100rem;
+  margin: -8.5rem 0 2rem 100rem;
 }
 
 .vraag{
@@ -147,7 +151,7 @@
 .subtitel {
   composes: medium from "../../styles/typo.module.css";
   font-size: 3rem;
-  margin: 5rem auto 0;
+  margin: 3rem auto 3rem;
   display: flex;
   justify-content: center;
   width: 55rem;
@@ -245,7 +249,7 @@
 .grid {
   display: grid;
   grid-template-columns: 50% 50%;
-  margin: 18rem auto 10rem;
+  margin: 10rem auto 10rem;
   width: 70%;
 }
 
