--- a/src/components/Record/Record.module.css
+++ b/src/components/Record/Record.module.css
@@ -7,7 +7,7 @@
 
 .error2 {
   composes: error from "../../styles/layouts.module.css";
-  margin-top: -3rem;
+
 }
 
 .container__video {
@@ -133,12 +133,14 @@
   justify-content: center;
 }
 
-.next{
+/* PODCAST */
+.next{ 
+  
   composes: next from "../../styles/layouts.module.css";
   border: none;
   color: grey;
   display: flex;
-  margin: 9.2rem 0 0rem 101.5rem;
+  margin: 6.8rem 0 0rem 101.5rem;
 }
 
 .next__text {
@@ -162,10 +164,11 @@
   border: none;
   background-color:  #FFDC61;
   display: flex;
-  margin: 9.2rem 0 0rem 101.5rem;
+  margin: 6.8rem 0 0rem 101.5rem;
 }
 
-.next2{
+/* VIDEO */
+.next2{ 
   composes: next from "../../styles/layouts.module.css";
   border: none;
   color: grey;
@@ -300,6 +303,17 @@
     z-index: -2;
     border: none;
     margin-bottom: 2rem;
+}
+
+.error {
+  composes: error from "../../styles/layouts.module.css";
+}
+
+.video__regel {
+  margin: 2rem auto 0 ;
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
 }
 
 
