--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -4,7 +4,7 @@
 .list {
   display: flex;
   align-items: center;
-  background-color: background;
+  background-color: white;
   height: 100%;
 }
 
