--- a/src/components/Ontvanger/Ontvanger.module.css
+++ b/src/components/Ontvanger/Ontvanger.module.css
@@ -2,6 +2,9 @@
 @value tokens: "../../styles/tokens.module.css";
 @value fontTitel, spacer1, fontSubtitel from tokens;
 
+.error {
+  composes: error from "../../styles/layouts.module.css";
+}
 
 .vraag__bold {
   composes: bold from "../../styles/typo.module.css";
@@ -119,7 +122,7 @@
   border: none;
   color: grey;
   display: flex;
-  margin: -3rem 0 0rem 108.5rem;
+  margin: 2.9rem 0 0rem 70.0rem;
 }
 
 .next__text {
@@ -143,7 +146,7 @@
   border: none;
   background-color:  #FFDC61;
   display: flex;
-  margin: -3rem 0 0rem 108.5rem;
+  margin: 10.5rem 0 0rem 70.0rem;
 }
 
 .back{
@@ -160,7 +163,7 @@
   display: flex;
   justify-content: space-between;
   margin-right: 21rem;
-  width: 108rem;
+  width: 109rem;
 }
 
 .back__text::after {
@@ -176,7 +179,7 @@
   
 .grid {
   width: 70.1rem;
-  margin: 4rem auto 0;
+  margin: 7rem auto 0;
 }
 
 .wrapper {
@@ -200,12 +203,19 @@
   width: 20rem;
   margin-right: 2rem;
 }
-
-.input{
-  margin-bottom: 6rem;
-}
-
 .input__postcode {
   width: 20rem;
+  margin-right: 2rem;
 }
+
+.subtitel {
+  composes: medium from "../../styles/typo.module.css";
+  font-size: 3rem;
+  margin: 2rem auto -2rem;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  justify-content: center;
+}
+
 
