--- a/src/components/Result/Result.module.css
+++ b/src/components/Result/Result.module.css
@@ -44,11 +44,15 @@
     margin-top: -14rem
   }
 
+  .wrapper__buttons {
+    margin-bottom: -12rem;
+  }
+
   .back {
     composes: next from "../../styles/layouts.module.css";
     border: none;
-    display: flex;
-    margin: 3rem 0 0rem 10rem;
+    /* display: flex; */
+    margin: 9.4rem 0 -8rem 10rem;
   }
 
   .back__text {
@@ -77,7 +81,7 @@
     border: none;
     background-color:  #FFDC61;
     display: flex;
-    margin: -7rem 0 0rem 108.5rem;
+    margin: 2.7rem 0 0rem 104.7rem;
   }
 
   .next__text {
