--- a/src/components/Match/Match.module.css
+++ b/src/components/Match/Match.module.css
@@ -2,11 +2,12 @@
 @value tokens: "../../styles/tokens.module.css";
 @value fontTitel, fontSubtitel, spacer1 from tokens; 
 
-.header{
-display: flex;
-flex-flow: column;
-align-items: center;
-justify-content: space-around;
+.header {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: space-around;
+  height: 60rem;
 }
 
 .vraag{
@@ -15,6 +16,7 @@ justify-content: space-around;
   margin-top: spacer1;
   display: flex;
   justify-content: center;
+  margin-bottom: 6rem;
 }
 
 .next__active {
@@ -23,7 +25,7 @@ justify-content: space-around;
   background-color:  #FFDC61;
   display: flex;
   z-index: 1000;
-  margin: 0 auto 0
+  margin: 9.3rem auto 0
 }
 
 .next__text {
@@ -31,7 +33,7 @@ justify-content: space-around;
 }
 
 .container__audio {
-  width: 70%;
+  width: 80%;
 }
 
 
