aanpassingen in app

--- a/src/styles/layouts.module.css
+++ b/src/styles/layouts.module.css
@@ -1,6 +1,6 @@
 
 @value tokens: "./tokens.module.css";
-@value fontTitel, spacer1 from tokens;
+@value fontTitel, spacer1 , geel from tokens;
 
 .button__text{
     display: flex;
@@ -110,4 +110,11 @@
     height: 3.4rem;
     margin: 4rem auto -5rem;
     text-align: center;
+  }
+
+  .container {
+    width: 37.5rem;
+    background-color: geel;
+    margin-top: -6.5rem;
+
   }
