--- a/src/components/HomePage/HomePage.module.css
+++ b/src/components/HomePage/HomePage.module.css
@@ -17,6 +17,9 @@
     border-radius: 2rem;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
     justify-content: center;
     margin: 0 .5rem;
     font-family: raleway;
@@ -38,4 +41,8 @@
 
 .headwrapper {
     margin-top: 10rem;
+}
+
+.image {
+    margin: 0 auto;
 }
