--- a/src/components/ContentHeader/ContentHeader.module.css
+++ b/src/components/ContentHeader/ContentHeader.module.css
@@ -2,9 +2,16 @@
 @value background, spacer1, notblack from tokens;
 
 .header {
-  background-color: background;
+  background-color: white;
+  text-transform: uppercase;
   display: flex;
-  align-items: center;
+  justify-content: center;
+  padding: 2rem;
+  font-family: raleway;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  margin-top: -6.5rem;
 }
 
 .title {
@@ -12,4 +19,5 @@
   padding: spacer1;
   text-transform: capitalize;
   color: notblack;
+  text-transform: uppercase;
 }
