toevoegen van zoom functie op de kaart

--- a/src/components/Kaart/Kaart.module.css
+++ b/src/components/Kaart/Kaart.module.css
@@ -15,5 +15,9 @@
 }
 
 .svg {
-	width: 50%;
+	background-color: #EFEFEE;
+}
+
+.container {
+	composes: container from "../../styles/layouts.module.css";
 }
