--- a/src/components/ContentHeader/ContentHeader.module.css
+++ b/src/components/ContentHeader/ContentHeader.module.css
@@ -11,6 +11,11 @@
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100vw;
 }
 
 .title {
