--- a/src/components/Authentication/Authentication.module.css
+++ b/src/components/Authentication/Authentication.module.css
@@ -30,11 +30,18 @@ a.textlink:hover {
   display: grid;
   grid-auto-rows: max-content;
   margin: 3rem auto 3rem;
-
 }
+.form__register {
+  margin: 1rem auto 3rem;
+}
+
 .button{
   composes: buttonApp from "../../styles/components.module.css";
   margin: 0 auto 2rem;
+}
+
+.button__register{
+  margin: 0 auto -1rem;
 }
 
 .title {
