--- a/src/components/Authentication/Authentication.module.css
+++ b/src/components/Authentication/Authentication.module.css
@@ -35,6 +35,10 @@ a.textlink:hover {
   margin: 1rem auto 3rem;
 }
 
+.form__titel__info {
+  font-size: 1.5rem;
+}
+
 .button{
   composes: buttonApp from "../../styles/components.module.css";
   margin: 0 auto 2rem;
@@ -81,5 +85,16 @@ a.textlink:hover {
   font-size: 1.8rem;
   composes: bold from "../../styles/typo.module.css";
   line-height: 2.5rem;
+}
+
+.form__validatie {
+  display: flex;
+  width: 100vw;
+}
+
+.form__error{
+  color: red;
+  margin-left: 2rem;
+  margin-top: 0.5rem;
 }
 
