--- a/src/components/AppHeader/AppHeader.module.css
+++ b/src/components/AppHeader/AppHeader.module.css
@@ -5,6 +5,7 @@
   background-color: white;
   text-transform: uppercase;
   display: grid;
+  align-items: center;
   grid-template-columns: 1fr 2fr 1fr;
   padding: 2rem;
   font-family: raleway;
@@ -23,4 +24,11 @@
   color: notblack;
   text-transform: uppercase;
   text-align: center;
+}
+
+.back{
+  border: none;
+  background-color:transparent;
+
+  font-size: 2.5rem;
 }
