--- a/src/components/InfoHeader/InfoHeader.module.css
+++ b/src/components/InfoHeader/InfoHeader.module.css
@@ -5,7 +5,6 @@
   background-color: white;
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
-  padding: 2rem;
   font-family: raleway;
   font-style: normal;
   font-weight: 500;
@@ -14,11 +13,25 @@
   left: 0;
   right: 0;
   width: 100vw;
+  height: 6rem;
+  align-items: center;
+}
+
+.button{
+    background-color: transparent;
+    border: none;
+    font-size: 1.8rem;
 }
 
 .button__text {
     font-size: 1.8rem;
     text-transform: none;
+}
+
+.button__text__logout {
+    background-color: lightgrey;
+    border-radius: 2rem;
+    padding: 0.5rem;
 }
 
 .title {
@@ -27,6 +40,7 @@
   color: notblack;
   text-transform: uppercase;
   text-align: center;
+  grid-column: 2;
 }
 
 
