--- a/src/components/AppHeader/AppHeader.module.css
+++ b/src/components/AppHeader/AppHeader.module.css
@@ -26,6 +26,10 @@
   font-size: 2rem;
 }
 
+.back__text{
+  color: black;
+}
+
 
 .subtitle {
   composes: title1 from "../../styles/typo.module.css";
