--- a/src/components/User/User.module.css
+++ b/src/components/User/User.module.css
@@ -5,17 +5,18 @@
   border-radius: 50%;
 }
 
-.list__link {
+.list {
   border-bottom: 0.2rem solid white;
-  width: 95%;
+}
+
+.list__link {
   display: flex;
   display: grid;
-  grid-template-columns: 1fr 3fr 0.5fr;
   color: black;
-  grid-template-areas: "img user";
-  width: 100%;
+  grid-template-columns: 1fr 2fr 0.5fr;
+  width: 100vw;
   font-size: 1.8rem;
   align-items: center;
-  padding: 2rem;
+  margin: 2rem;
 }
 
