--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -7,12 +7,13 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 3fr 3fr;
   align-items: center;
-  width: 100%;
+  width: 100vw;
   justify-content: center;
   overflow: hidden;
   position: fixed;
   bottom: 0;
-  width: 37.5rem;
+  left:0;
+  right: 0;
   z-index: 100;
 
 }
