--- a/src/components/HomePage/HomePage.module.css
+++ b/src/components/HomePage/HomePage.module.css
@@ -15,7 +15,6 @@
     border-radius: 2rem;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     display: flex;
-    height: 13.5rem;
     min-height: 105%;
     flex-direction: column;
     align-items: center;
@@ -31,6 +30,8 @@
     padding: 1rem;
     align-items: flex-end;
     color: black;
+    width: 16.5rem;
+    height: 16.5rem;
 }
 
 .link__bottom {
