--- a/src/components/HomePage/HomePage.module.css
+++ b/src/components/HomePage/HomePage.module.css
@@ -15,7 +15,7 @@
     border-radius: 2rem;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     display: flex;
-    min-height: 105%;
+    /* min-height: 105%; */
     flex-direction: column;
     align-items: center;
     align-content: center;
@@ -32,23 +32,6 @@
     color: black;
     width: 16.5rem;
     height: 16.5rem;
-}
-
-.link__bottom {
-    margin: 0 7rem;
-}
-
-.linktext__bottom {
-    width: 100%;
-}
-
-.linktext__right {
-    margin-top: 0.2rem;
-}
-
-.wrapper__kaart {
-    width: 95%;
-    min-height: 20%;
 }
 
 
