--- a/src/components/DetailLand/DetailLand.module.css
+++ b/src/components/DetailLand/DetailLand.module.css
@@ -1,3 +1,52 @@
 .list {
   list-style-type: decimal;
 }
+
+.container {
+  composes: container from "../../styles/layouts.module.css";
+  height: 40vh;
+  bottom: 0;
+  position: absolute;
+  margin-left: -37.5rem;
+  border-radius: 3rem;
+}
+
+.subtitle {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 2.5rem;
+  line-height: 2.9rem;
+  margin-top: 1.5rem;
+  margin-left: 3rem;
+}
+
+.souvenirs {
+  font-size: 1.2rem;
+  padding-left: 3rem;
+  margin-top: .5rem;
+  padding-bottom: .7rem;
+  border-bottom: 0.2rem solid white;
+}
+
+.list__text {
+  font-size: 1.5rem;
+  color: black;
+  margin-left: 3rem;
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.list__text::before {
+  content: url('../../assets/img/souvenirplay.png');
+  width: 2.8rem;
+  height: 2.8rem;
+  margin-right: 3rem ;
+}
+
+.souvenirs__list {
+  z-index: 103;
+  overflow: scroll;
+  height: 10rem;
+}
