--- a/src/components/Kaart/Kaart.module.css
+++ b/src/components/Kaart/Kaart.module.css
@@ -17,13 +17,15 @@
 
 .svg {
 	fill: lightblue;
+	width: 800.6rem;
+	height: 800.6rem;
 }
 
 .container {
 	composes: container from "../../styles/layouts.module.css";
 }
 
-.wrap {
-	width: 100vw; 
-	height: 53rem;
+.container__panzoom {
+	width: 100%;
+	height: 100%;
 }
