--- a/src/components/Authentication/Authentication.module.css
+++ b/src/components/Authentication/Authentication.module.css
@@ -101,4 +101,35 @@ a.textlink:hover {
   margin-top: 0.5rem;
 }
 
+.form__clearButton {
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  border: none;
+  background: lightgray;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+.form__wrapper__input__item__clear1 {
+  position: absolute;
+  right: 25px; 
+  top: 120px; 
+}
+
+.form__wrapper__input__item__clear2 {
+  position: absolute;
+  right: 25px; 
+  top: 224px; 
+}
+
+.form__wrapper__input {
+  display: flex;
+}
+
+.form__wrapper__input__item {
+  position: relative;
+}
+
 
