--- a/src/components/SouvenirWallDetail/SouvenirWallDetail.module.css
+++ b/src/components/SouvenirWallDetail/SouvenirWallDetail.module.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-top: 6rem;
+  margin-top: 10rem;
   align-items: center;
 }
 
@@ -21,9 +21,42 @@
   font-weight: 800;
   font-size: 1.8rem;
   line-height: 2.1rem;
-  margin-bottom: 7rem;
+  margin-bottom: 4rem;
 }
 
 .image {
   margin-bottom: 2rem;
+}
+
+.button {
+  width: 33.5rem;
+    height: 5.4rem;
+    border-radius: 8rem;
+    border: none;
+    background-color: #89D0CA;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    display: flex;
+    margin: 2rem auto;
+    justify-content: center;
+    align-items: center;
+    color: black;
+}
+
+.button__text {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 2rem;
+    line-height: 2.3rem;
+    text-align: center;
+}
+
+.button__text::after {
+    content: '\003E';
+    position: absolute;
+    left: 32.7rem;
+}
+
+.button__text:checked {
+  border: 1rem solid white;
+  border-radius: 8rem;
 }
