--- a/src/components/NavBarSouvenir/NavBarSouvenir.module.css
+++ b/src/components/NavBarSouvenir/NavBarSouvenir.module.css
@@ -1,21 +1,72 @@
-.navbar {
-    bottom: 0;
-}
+
 
 .button__scan {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    margin-bottom: 1rem;
-    color: black;
+    margin-top: -3.5rem;
+    z-index: 100;
+    height: 8rem;
 }
 
 .list__text {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    font-family: raleway;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 1.2rem;
+    color: black;
+    width: 10rem;
+    display: flex;
+    justify-content: center;
+    padding-top: .5rem;
+    margin-top: -1.5rem;
 }
 
 .img {
     margin-bottom: 1rem;
 }
+
+.list {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 2fr 3fr;
+    align-items: center;
+    width: 100vw;
+    justify-content: center;
+    overflow: hidden;
+    position: fixed;
+    bottom: 0;
+    left:0;
+    right: 0;
+    z-index: 100;
+  
+  }
+
+  .list__item {
+    display: flex;
+    justify-content: center;
+    grid-row: 2;
+    background-color: white;
+    height: 100%;
+    padding-bottom: 2rem;
+  }
+
+  .button {
+    border: none;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: fontSizeMedium;
+    height: 6.8rem;
+    width: 100%;
+    background-color: white;
+    color: darkPrimary;
+  }
+
+  .scan {
+    width: 9rem;
+  }
