--- a/src/components/Vraag4/Vraag4.module.css
+++ b/src/components/Vraag4/Vraag4.module.css
@@ -125,8 +125,5 @@
   }
 
   .error {
-    color: red;
-    display: flex;
-    justify-content: center;
-    margin-top: -3rem;
+    composes: errorApp from "../../styles/layouts.module.css";
   }
