--- a/src/styles/layouts.module.css
+++ b/src/styles/layouts.module.css
@@ -102,6 +102,16 @@
     text-align: center;
   }
 
+  .errorApp {
+    display: block;
+    color: red;
+    font-size: 1.5rem;
+    font-weight: 600;
+    height: 3.4rem;
+    margin: -2rem auto -3rem;
+    text-align: center;
+  }
+
   .error__input{
     display: block;
     color: red;
@@ -119,4 +129,13 @@
     background-blend-mode: screen;
     height: 100vh;
     overflow: scroll;
+  }
+
+  .succes{
+    display: block;
+    color: green;
+    font-size: 1.5rem;
+    font-weight: 600;
+    height: 3.4rem;
+    margin: -2rem 5rem;
   }
