--- a/src/components/HomePage/HomePage.module.css
+++ b/src/components/HomePage/HomePage.module.css
@@ -10,6 +10,10 @@
     text-transform: uppercase;   
 }
 
+.hidden {
+    display: none;
+}
+
 .link {
     background-color: white;
     border-radius: 2rem;
