--- a/src/components/Kaart/Kaart.module.css
+++ b/src/components/Kaart/Kaart.module.css
@@ -5,7 +5,6 @@
 	stroke-opacity: 1;
 	stroke-width:0.75;
 	transition: 0.1s;
-
 }
 
 .land:hover {
@@ -37,6 +36,10 @@
 .tools {
 	width: 100%;
 	height: 100%;
+}
+
+.hidden {
+ display: none;
 }
 
 
